# src/modules/calleds/routes/called.router.ts
@@ -9,13 +9,11 @@ const calledsController = new CalledsController()
 calledRouter.use(ensureAuthenticated)
 calledRouter.post("/", userAuthorization(["admin", "customer"]), calledsController.create)
 calledRouter.get("/", userAuthorization(["admin"]), calledsController.indexAll)
-calledRouter.get("/called/:id", userAuthorization(["admin", "technical", "customer"]), calledsController.indexCalledId)
 calledRouter.get("/user", userAuthorization(["customer", "technical"]), calledsController.indexUser)
 calledRouter.patch("/services", userAuthorization(["technical"]), calledsController.addServices)
-// Comments
 calledRouter.post("/comment", userAuthorization(["admin", "technical"]), calledsController.createComments)
 calledRouter.patch("/comment/:id", userAuthorization(["admin", "technical"]), calledsController.updateComments)
+calledRouter.get("/:id", userAuthorization(["admin", "technical", "customer"]), calledsController.indexCalledId)
+calledRouter.patch("/:id",userAuthorization(["admin", "technical"]), calledsController.update)
+calledRouter.delete("/:id/services/:idServices", userAuthorization(["technical"]), calledsController.removeServices)
 calledRouter.delete("/comment/:id", userAuthorization(["admin", "technical"]), calledsController.removeComments)
-//
-calledRouter.patch("/:idCalled",userAuthorization(["admin", "technical"]), calledsController.update)
-calledRouter.delete("/:idCalled/:idServices", userAuthorization(["technical"]), calledsController.removeServices)
